[gd_scene load_steps=2 format=3 uid="uid://bjaxcolwg0vla"]

[ext_resource type="Script" path="res://assets/ui/pausemenu/pause_menu.gd" id="1_wtlio"]

[node name="PauseLayer" type="CanvasLayer"]
process_mode = 3
layer = 4
script = ExtResource("1_wtlio")

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../MenuButton")
focus_next = NodePath("../MenuButton")
focus_previous = NodePath("../QuitButton")
text = "Resume"

[node name="MenuButton" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../ResumeButton")
focus_neighbor_bottom = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../ResumeButton")
text = "Main Menu"

[node name="QuitButton" type="Button" parent="Menu/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../MenuButton")
focus_neighbor_bottom = NodePath("../ResumeButton")
focus_next = NodePath("../ResumeButton")
focus_previous = NodePath("../MenuButton")
text = "Quit"

[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="Menu/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
